# data-models

./: $FILE  .env  .gitignore  .gitmodules  .synapseConfig  EL.data.model.csv  EL.data.model.jsonld  EL_data_model.jsonld  EL_data_model_v2.csv  EL_data_model_v2.jsonld  Gemfile  README.md  _config.yml  change-log.md  config.yml  data-models  dca-template-config.json  dca_config.json  index.md  pyproject.toml  requirements.txt  schematic_config.yml  test-schematic-refactor.py
.devcontainer/: devcontainer.json  post_create.sh
.github/: README.md
RFC Tables/: EL Assay_ RNAseq data model.xlsx  EL Assay_ bsSeq (bisulfite-seq_WGBS_methylseq_methylomics) data model.xlsx  EL Assay_ scRNAseq data model.xlsx  EL RFC Assay_Whole Genome Sequencing Data Model.xlsx  EL RFC Metabolomics Human Data Model.xlsx  EL RFC Microbiome Data Model.xlsx  EL RFC genotyping_assay.xlsx  EL RFC_ Assay_proteomics Data Model.xlsx  EL RFC_ Biospecimen_human data model.xlsx  EL RFC_ Biospecimen_nonHuman data model.xlsx  EL RFC_ Individual_ Human data model.xlsx  EL RFC_ Individual_ nonHuman data model.xlsx  EL RFC_assay_other.xlsx
_data/: ADKP.csv  COL.csv  DUO.csv  DUO_template.csv  DataModel.csv  False.csv  ManifestColumn.csv  ModelSystemType.csv  Unknown.csv  acquisitionBatchSizeUnit.csv  analysisType.csv  analysis_results_metadata_template.csv  assay.csv  assay_RNAseq_annotation_template.csv  assay_RNAseq_template.csv  assay_bsSeq_annotation_template.csv  assay_bsSeq_template.csv  assay_genotyping_annotation_template.csv  assay_metabolomics_annotation_template.csv  assay_metabolomics_template.csv  assay_metagenomics_annotation_template.csv  assay_metagenomics_template.csv  assay_microbiome_annotation_template.csv  assay_microbiome_template.csv  assay_phenotype_human_template.csv  assay_proteomics_annotation_template.csv  assay_proteomics_template.csv  assay_scRNAseq_annotation_template.csv  assay_scRNAseq_template.csv  assay_whole_genome_sequencing_annotation_template.csv  assay_whole_genome_sequencing_template.csv  batch.csv  batchSizeUnit.csv  biospecimen.csv  biospecimen_human_template.csv  biospecimen_non_human_template.csv  captivityStatus.csv  cellType.csv  clinical.csv  cohort.csv  (+112 more)
_includes/: EL_network_graph.html  head_custom.html
_layouts/: Metadata_Template.md  (+2 more)
(+1189 files in other folders)
